docker-compose/k8s/bkp/movies-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: movies
spec:
  selector:
    app: movies
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
