docker-compose/k8s/bkp/movies-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: movies
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: localdev.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: movies
                port:
                  number: 8080
